<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/scene_start_background2"
    android:foregroundGravity="fill">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@mipmap/ic_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp"
            android:paddingBottom="5dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorBrown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ScrollView
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:minWidth="200dp"
            android:minHeight="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/username_text"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_menu_button"
                        android:layout_marginEnd="10dp">

                        <EditText
                            android:id="@+id/username_field"
                            style="@style/Widget.AppCompat.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/username_text"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            tools:text="DainWs" />
                    </FrameLayout>

                    <Button
                        android:id="@+id/save_username_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/drawable_menu_button"
                        android:text="@string/save_button"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/settings_fps_tittle"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/white" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/drawable_menu_button">

                    <Spinner
                        android:id="@+id/settings_fps_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dropDownWidth="match_parent"
                        android:entries="@array/fps"
                        android:minWidth="150dp"
                        android:minHeight="50dp"
                        android:popupBackground="@drawable/drawable_menu_dropdown"
                        android:spinnerMode="dialog"
                        android:textColor="@color/colorBrown"
                        android:textSize="24sp" />
                </FrameLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/settings_time_tittle"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/white" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/drawable_menu_button">

                    <Spinner
                        android:id="@+id/settings_time_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dropDownWidth="match_parent"
                        android:entries="@array/time"
                        android:minWidth="150dp"
                        android:minHeight="50dp"
                        android:popupBackground="@drawable/drawable_menu_dropdown"
                        android:spinnerMode="dialog"
                        android:textColor="@color/colorBrown"
                        android:textSize="24sp" />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>